docs/styles.css
/*resets browser defaults*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* adds smooth scroll effect to make the page section transitions more gently*/
html {
  scroll-behavior: smooth;
}

body {
  font-family: "Helvetica", "Arial", sans-serif;
  font-size: 16px;
  text-align: left;
  line-height: 1.5; /*adds spacing within content*/

  color: #343434; /* font color - dark gray */
  background-color: #F3F3F3; /* base color - off white */

  overflow-x: hidden;
}

h1, h2, h3, h4, h5, h6 {
  text-align: center;
  letter-spacing: .5px; /tracking of bold headers to feel less crowded
}

h2 {
  font-size: 1.3em;
}

/* fixes issue of navigation bar partially covering header on jump */
.bio-top > h1 span,
.portfolio-header > h1 span,
.communicate > h1 span,
.bio-top > h2 span,
.portfolio-header > h2 span,
.communicate > h2 span {
  margin-top: -.5em;
  padding-bottom: .5em;
  display: block;
}

h3 {
  font-size: 1.1em;
}

a {
  color: #33659E; /*dark blue*/
  text-decoration: none; /* removes underline from links */
  font-weight: bold;
}

a:hover {
  text-decoration: overline;
}

/*color of emdashes*/
.bio-top > p,
.portfolio-header > p:first-of-type,
.communicate > p:first-of-type,
.credits > p:first-of-type {
  margin-top: -4px;
  text-align: center;
  color: #33659E;
}

/* NAV BAR */

nav {
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.home-initials > a {
  color: #F3F3F3;
}

.home-initials > a:hover {
  text-decoration: overline;
  color: #EED6C8;
  font-weight: bold;
}

#main-nav {
  background-color: #4E5C59;
}

nav > ul {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

nav > ul > li {
  display: inline;
}

nav > ul > li > a {
  color: #F3F3F3;
  font-size: 16px;
  font-weight: bold;
}

nav > ul > li > a:hover {
  text-decoration: overline;
  color: #EED6C8;
  font-weight: bold;
}

.about,
.portfolio,
.contact {
  margin-left: 25px;
}

/* LANDING PAGE */

.introduction {
  height: 400px;
  color: #F3F3F3;
  background-color: #4E5C59;
  display: flex;
  justify-content: center;
}

.L-text {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-left: 5px;
}

.L-text > p {
  text-align: center;
  font-size: 16px;
  color: #EED6C8;
}

.L-text > p:first-of-type {
  font-style: normal;
  font-size: 5.6em;
  letter-spacing: 1px;
  text-align: center;
  font-weight: normal;
  color:#F3F3F3;
  }
}

.L-text > p:nth-of-type(2) {
  font-size: 2.8em;
  letter-spacing: 1.75px;
  color:#F3F3F3;
  font-weight: bold;
  font-style: normal;
}

.R-img {
  display: none;
}

/* ABOUT */

.bio {
  margin-top: 60px;
  display: flex;
  flex-direction: column;
}

.bio-top > p {
  position: relative;
  margin-left: 1px;
}

.L-img > img {
  border-radius: 50%;
  background-color: #EED6C8;
  margin-top: 25px;
}

.bio-mid,
.bio-bottom,
.icon-focus,
.portfolio-header {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.R-bio {
  margin-top: 25px;
  width: 80%;
}

.icon-focus {
  margin-top: 35px;
  width: 15em;
}

.icon-focus > h3 {
  margin-top: 10px;
}

.icon-focus > p {
  margin-top: 10px;
}


/* PORTFOLIO */
#portfolio-nav > ul {
  padding-top: 2.2em;
  padding-bottom: 1em;
  width: 60%;
}

#portfolio-nav > ul > li > a {
  width: 100%;
  background-color: #F3F3F3;

  color: #33659E; /*dark blue*/
  text-decoration: none; /* removes underline from links */
  font-weight: bold;
}

#portfolio-nav > ul > li > a:hover {
  text-decoration: overline;
}

#portfolio-nav > ul > li > a:focus {
  outline: 2.5px solid #33659E;
}

.work {
  margin-top: 60px;
}

.portfolio-header > p {
  margin-top: 10px;
  width: 80%;
}

.images {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-content: center;
}

.images > img, video {
  width: 100%;
}

.project {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.images > .project {
  margin-left: 5px;
  margin-right: 5px;
  margin-top: 25px;
}

.images > .project > a {
  margin-top: 7px;
  text-align: center;
  color: #33659E;
}

.images > .project > a:hover {
  text-decoration: overline;
  font-weight: bold;
}

.insta {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.insta > a {
  margin-top: 6px;
}


/* CONTACT */

.communicate {
  margin-top: 60px;
  text-align: center;
}

.tagline {
  margin-bottom: 8px;
}

.communicate > p:nth-last-of-type(4) {
  margin-top: 10px;
}


/* CREDITS */
.credits {
  margin-top: 60px;
  padding-top: 10px;
  height: 160px;
  width: 100%;
  background-color: #4E5C59;
  color: #F3F3F3;
  text-align: center;
}

.credits > p {
  font-size: 10px;
}

.credits > p:first-of-type {
  font-size: 16px;
  position: relative;
  margin-left: 1.5em;
  color: #EED6C8;
}

.credits > p > a {
  color: #EED6C8;
  font-weight: bold;
}

.credits > p > a:hover {
  text-decoration: overline;
}

.credits > p:last-of-type {
  margin-bottom: 30px;
}

/*phone screen width*/
@media only screen and (max-width: 480px) {
  body {
    overflow-x: hidden;
  }

  nav {
    padding-right: 1em;;
  }

  .L-text {
    margin-left: 0px;
  }

  .L-text > p:first-of-type {
    font-size: 4.2em;
  }
  .L-text > p:nth-of-type(2) {
    font-size: 2.6em;
    color:#F3F3F3;
    font-weight: bold;
    font-style: normal;
  }

  #portfolio-nav {
    padding-top: 2.5em;
    margin-bottom: 2.5em;
  }

  #portfolio-nav > ul {
    display: flex;
    flex-direction: column;
    align-items: center;
    line-height: 2;
  }

  .contact-list > p:first-of-type {
    margin-top: 25px;
  }
  .contact-list > p {
    margin-bottom: 10px;
  }
  .credits {
    height: 320px;
  }
  .credits > p {
    margin-left: 40px;
    margin-right: 40px;
    margin-bottom: 10px;
  }

}


/* tablet styles + small desktop screen width */
@media only screen and (min-width: 481px) and (max-width: 960px) {
  body {
    overflow-x: hidden;
  }

  /*landing*/
  .L-text {
    margin-left: 0px;
  }

  .L-text > p:nth-of-type(2) {
    margin-top: 0;
    font-size: 2.6em;
    color:#F3F3F3;
    font-weight: bold;
    font-style: normal;
  }

  /*nav*/
  #main-nav > ul {
    width: 26em;
  }

  .about {
    margin-left: auto;
  }

  .portfolio,
  .contact {
    margin-left: 40px;
  }

  .R-bio,
  .portfolio-header > p {
    width: 50%;
  }


    #portfolio-nav {
      padding-top: 2.5em;
      margin-bottom: 2.5em;
    }

    #portfolio-nav > ul {
      display: flex;
      flex-direction: column;
      align-items: center;
      line-height: 2;
    }


  .contact-list > p:first-of-type {
    margin-top: 25px;
  }
  .contact-list > p {
    margin-bottom: 10px;
  }

  .credits > p {
    margin-left: 20px;
    margin-right: 20px;
  }

}

/* desktop rules */
@media only screen and (min-width: 1020px) {
  .intro-background-bar {
    height: 440px;
    background-color: #4E5C59;
  }
  .page {
    margin: 0 auto; /* centers the page */
    max-width: 60em; /*limit character line to improve readability*/
  }

/*nav*/
  #main-nav > ul {
    width: 57em;
  }

  .about {
    margin-left: auto;
  }

  .portfolio,
  .contact {
    margin-left: 40px;
  }
/*landing*/
  .L-text {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
  }

  .L-text > p {
    text-align: center;
  }

  .L-text > p:first-of-type {
    position: relative;
    margin-left: -27px;
  }

  .L-text > p:nth-of-type(2) {
    margin-top: 0;
    font-size: 2.6em;
    text-align: center;
    color:#F3F3F3;
    font-weight: bold;
    font-style: normal;
  }

  .R-img {
    display: flex;
  }

  .R-img > img {
    position: relative;
    top: 59px;
  }
/*about*/
  .bio {
    margin-top: 150px;
    display: flex;
    flex-direction: column;
  }

  .bio-top > h2 {
    position: relative;
    margin-right: 3em;
  }

  .bio-top > p {
    text-align: center;
    margin-left: -4.25em;
  }

  .bio-mid {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
  }

  .R-bio {
    margin-top: 0;
    display: flex;
    align-self: center;
    margin-left: 40px;
    width: 50%;
  }

  .bio-bottom {
    margin-top: 5px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
  }

  .icon-focus {
    width: 16em;
  }
  /*portfolio*/
  .work,
  .communicate {
    margin-top: 40px;
  }

  .images > img, video {
    width: 642px;
  }

  .images > .project > a {
    text-align: right;
  }

  .insta {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
  }

  /*contact*/
  .communicate {
    margin-top: 40px;
  }

  .tagline {
    margin-bottom: -10px;
  }

  .contact-list {
    margin-top: 40px;
    display: flex;
    justify-content: center;
  }

  .contact-list > p {
    margin-right: 120px;
  }

  .contact-list > p:last-of-type {
    margin-right: 30px;
  }

}

/* accessibility styling for keyboard nav*/
a:focus {
  outline: 2.5px solid #33659E; /*dark blue*/
}

.home-initials > a:focus,
nav > ul > li > a:focus,
.credits > p > a:focus {
  outline: 2.5px solid #EED6C8;
}

nav > ul > li > a.skip-to-content-link {
  color: #343434; /* font color - dark gray */
  background: #EED6C8;
  height: 30px;
  left: 44%;
  padding: 8px;
  position: absolute;
  transform: translateY(-200%);
  transition: transform 0.3s;
}

nav > ul > li > a.skip-to-content-link:focus {
  transform: translateY(40%);
  outline: 2.5px solid #343434;
}

nav > ul > li > a.skip-to-content-link:hover {
  text-decoration: overline;
  color: #343434;
}

/*allows for screen reader only headings for portfolio site title and intro title*/
.visually-hidden {
  position: absolute;
  margin-left: -10px;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

